#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddldata
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-04-03
2013-02-05 Andy Salnikov
- update usdusb.DataV1 definition

Tag: V00-04-02
2013-02-05 Andy Salnikov
- upgrading to pdsdata V06-01-04
- new classes princeton.ConfigV5, princeton.FrameV2

Tag: V00-04-01
2013-02-04 Andy Salnikov
- upgrading to pdsdata V06-01-02
- new classes cspad2x2.ConfigV2 and cspad2x2.ConfigV2QuadReg
- method ipimb.ConfigV{1,2}.diodeGain() renamed to capacitorValue()

Tag: V00-04-00
2013-01-30 Andy Salnikov
- switching to const ndarrays everywhere

Tag: V00-03-16
2013-01-28 Andy Salnikov
- updates related to ndarray constness change

Tag: V00-03-15
2013-01-02 Andy Salnikov
- upgrading to pdsdata V05-03-00
- new classes orca.ConfigV1 and timepix.ConfigV3
- bld.BldDataAcqADCV1 not implemented yet

Tag: V00-03-14
2012-12-12 Andy Salnikov
- replace tabs with spaces in XML to get consistent indentation
- implementation of encoder.DataV*.value changed to forward to method 
  instead of data member

Tag: V00-03-13
2012-11-15 Andy Salnikov
- upgrading to pdsdata V05-01-00
- new class bld/BldDataGMDV1

Tag: V00-03-12
2012-11-08 Andy Salnikov
- upgrading to pdsdata V04-05-00
- new class princeton/ConfigV4
- BldDataEbeamV* classes have new DamageMask enum
- BldDataGMDV0 changed without updating version number

Tag: V00-03-11
2012-10-23 Andy Salnikov
- upgrading to pdsdata V04-02-07
- added new package andor with classes ConfigV1, FrameV1

Tag: V00-03-10
2012-10-10 Andy Salnikov
- fix version numer for BldDataGMDV0

Tag: V00-03-09
2012-10-08 Andy Salnikov
- upgrading to pdsdata V04-02-01
- added new classes bld.BldDataGMDV0, usdusb.ConfigV1, usdusb.DataV1

Tag: V00-03-08